--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,7 +22,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.StudentCoursesSystem">
             <intent-filter>
@@ -31,25 +32,25 @@
         </activity>
 
         <activity
-            android:name=".StudentsActivity"
+            android:name=".ui.activity.StudentsActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".ui.activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".ui.activity.MainActivity" />
         </activity>
 
         <activity
-            android:name=".StudentDetailActivity"
+            android:name=".ui.activity.StudentDetailActivity"
             android:exported="false"
-            android:parentActivityName=".StudentsActivity">
+            android:parentActivityName=".ui.activity.StudentsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".StudentsActivity" />
+                android:value=".ui.activity.StudentsActivity" />
         </activity>
 
         <service
-            android:name=".services.MessagingService"
+            android:name=".service.MessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
